--- a/archive.html
+++ b/archive.html
@@ -94,30 +94,36 @@
                 <div class="p-card">
                     <div class="p-card__content">
                         <img src="/img/item.png">
-                        <h3 class="c-card__content--title">見出しが入ります</h3>
-                        <h4 class="c-card__content--subtitle">小見出しが入ります</h4>
-                        <p class="c-card__content--text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-                        <form action="#" class="p-card__content--details">
-                            <input type="button" name="details" value="詳しく見る" class="c-card__content--btn">
-                        </form>
+                        <div class="c-card__content--list">
+                            <h3 class="c-card__content--title">チーズバーガー</h3>
+                            <h4 class="c-card__content--subtitle">小見出しが入ります</h4>
+                            <p class="c-card__content--text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <form action="#" class="p-card__content--details">
+                                <input type="button" name="details" value="詳しく見る" class="c-card__content--btn">
+                            </form>    
+                        </div>
                     </div>
                     <div class="p-card__content">
                         <img src="/img/item.png">
-                        <h3 class="c-card__content--title">見出しが入ります</h3>
-                        <h4 class="c-card__content--subtitle">小見出しが入ります</h4>
-                        <p class="c-card__content--text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-                        <form action="#" class="p-card__content--details">
-                            <input type="button" name="details" value="詳しく見る" class="c-card__content--btn">
-                        </form>
+                        <div class="c-card__content--list">
+                            <h3 class="c-card__content--title">チーズバーガー</h3>
+                            <h4 class="c-card__content--subtitle">小見出しが入ります</h4>
+                            <p class="c-card__content--text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <form action="#" class="p-card__content--details">
+                                <input type="button" name="details" value="詳しく見る" class="c-card__content--btn">
+                            </form>    
+                        </div>
                     </div>
                     <div class="p-card__content">
                         <img src="/img/item.png">
-                        <h3 class="c-card__content--title">見出しが入ります</h3>
-                        <h4 class="c-card__content--subtitle">小見出しが入ります</h4>
-                        <p class="c-card__content--text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-                        <form action="#" class="p-card__content--details">
-                            <input type="button" name="details" value="詳しく見る" class="c-card__content--btn">
-                        </form>
+                        <div class="c-card__content--list">
+                            <h3 class="c-card__content--title">チーズバーガー</h3>
+                            <h4 class="c-card__content--subtitle">小見出しが入ります</h4>
+                            <p class="c-card__content--text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <form action="#" class="p-card__content--details">
+                                <input type="button" name="details" value="詳しく見る" class="c-card__content--btn">
+                            </form>    
+                        </div>
                     </div>
                 </div>
             </div>
@@ -137,7 +143,7 @@
             <div class="p-pagination">
                 <p class="p-pagination__page-number">page 1/10</p>
                 <ul class="p-pagination__list">
-                    <li class="p-pagination__list--items p-pagination__list--prev"><a href="#"></a></li>
+                    <li class="p-pagination__list--prev"><a href="#"></a></li>
                     <li class="p-pagination__list--items"><a href="#">1</a></li>
                     <li class="p-pagination__list--items"><a href="#">2</a></li>
                     <li class="p-pagination__list--items"><a href="#">3</a></li>
@@ -147,7 +153,7 @@
                     <li class="p-pagination__list--items"><a href="#">7</a></li>
                     <li class="p-pagination__list--items"><a href="#">8</a></li>
                     <li class="p-pagination__list--items"><a href="#">9</a></li>
-                    <li class="p-pagination__list--items p-pagination__list--next"><a href="#"></a></li>
+                    <li class="p-pagination__list--next"><a href="#"></a></li>
                 </ul>
             </div>
         </main>
