--- a/archive.html
+++ b/archive.html
@@ -82,8 +82,8 @@
                 </ul>
             </div>
 
-            <div class="p-archive-wrapper">
-                <div class="p-subheading">
+            <div class="p-archive__wrapper">
+                <div class="p-subheading--archive">
                     <h2 class="c-subheading__title">小見出しが入ります</h2>
                     <p class="c-subheading__text">
                         テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
@@ -106,7 +106,7 @@
                     <div class="p-card__content">
                         <img src="/img/item.png">
                         <div class="c-card__content--list">
-                            <h3 class="c-card__content--title">チーズバーガー</h3>
+                            <h3 class="c-card__content--title">ダブルチーズバーガー</h3>
                             <h4 class="c-card__content--subtitle">小見出しが入ります</h4>
                             <p class="c-card__content--text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
                             <form action="#" class="p-card__content--details">
@@ -117,7 +117,7 @@
                     <div class="p-card__content">
                         <img src="/img/item.png">
                         <div class="c-card__content--list">
-                            <h3 class="c-card__content--title">チーズバーガー</h3>
+                            <h3 class="c-card__content--title">スペシャルチーズバーガー</h3>
                             <h4 class="c-card__content--subtitle">小見出しが入ります</h4>
                             <p class="c-card__content--text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
                             <form action="#" class="p-card__content--details">
