--- a/single.html
+++ b/single.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
          <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-         <title>Archive</title>
+         <title>Single</title>
          <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
          <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link hrel="https://fonts.cdnfonts.com/css/m-1m" ref="stylesheet">
+        <link hrel="https://fonts.cdnfonts.com/css/m-1m" ref="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100;200;300;400;500;600;700&display=swap&family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/7db551ae4c.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/css/style.css">
